chore(ci): migrate CI to CI3
- use docker-compose for running integration tests so we have same CI as
  locally
- remove now deprecated ci jobs

related to #SRE-154